--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
     <url>https://github.com/takoeats/excel-annotator</url>
-    <tag>HEAD</tag>
+    <tag>1.0.2</tag>
   </scm>
 
   <properties>
