--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.takoeats</groupId>
   <artifactId>excel-annotator</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <packaging>jar</packaging>
 
   <name>Excel Annotator Library</name>
@@ -34,7 +34,7 @@
     <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
     <url>https://github.com/takoeats/excel-annotator</url>
-    <tag>1.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
