**[English]** [fix] Update test for new default column width calculation
**[한국어]**
[fix] 새로운 기본 열 너비 계산에 따른 테스트 수정

Signed-off-by: Junho <cleverfish1548@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,12 @@
   <packaging>jar</packaging>
 
   <name>Excel Annotator Library</name>
-  <description>Annotation-based Excel export library with Apache POI and SXSSF support</description>
+  <description>
+      Excel Annotator - Annotation-based Excel and CSV
+      export library. Declarative approach
+      using annotations. No POI boilerplate. Simple, clean,
+      and Spring-friendly.
+  </description>
   <url>https://github.com/takoeats/excel-annotator</url>
 
   <licenses>
