--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.takoeats</groupId>
   <artifactId>excel-annotator</artifactId>
-  <version>1.0.4</version>
+  <version>1.0.5</version>
   <packaging>jar</packaging>
 
   <name>Excel Annotator Library</name>
@@ -35,11 +35,11 @@
     </developer>
   </developers>
 
-  <scm>
+  <scm>`
     <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
     <url>https://github.com/takoeats/excel-annotator</url>
-    <tag>1.0.4</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
