--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </developer>
   </developers>
 
-  <scm>`
+  <scm>
     <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
     <url>https://github.com/takoeats/excel-annotator</url>
