**[English]** [fix] Update SCM tag in pom.xml to version 1.0.5
**[한국어]**
[fix] pom.xml의 SCM 태그를 버전 1.0.5로 업데이트

Signed-off-by: Junho <cleverfish1548@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
     <url>https://github.com/takoeats/excel-annotator</url>
-    <tag>HEAD</tag>
+    <tag>1.0.5</tag>
   </scm>
 
   <properties>
