**[ENGLISH]** [release] Update SCM tag to 2.2.0 in pom.xml
**[한국어]**
[release] pom.xml의 SCM 태그를 2.2.0으로 업데이트

Signed-off-by: takoeats
Signed-off-by: Junho <cleverfish1548@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <connection>scm:git:git://github.com/takoeats/excel-annotator.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/takoeats/excel-annotator.git</developerConnection>
         <url>https://github.com/takoeats/excel-annotator</url>
-        <tag>HEAD</tag>
+        <tag>2.2.0</tag>
     </scm>
 
     <properties>
