[refactor] Move GPG signing plugin to Maven profile for release builds, update max row constant, and enhance stream API edge case tests
**[한국어]**
[refactor] GPG 서명 플러그인 릴리스 빌드용 Maven 프로파일로 이동, 최대 행 상수 수정, 스트림 API 경계 테스트 개선

Signed-off-by: Junho <cleverfish1548@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -158,28 +158,6 @@
                 </configuration>
             </plugin>
 
-            <!-- GPG 서명 플러그인 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                        <configuration>
-                            <gpgArguments>
-                                <arg>--pinentry-mode</arg>
-                                <arg>loopback</arg>
-                            </gpgArguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- LICENSE와 NOTICE를 JAR에 포함 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -244,4 +222,36 @@
             <url>https://central.sonatype.com/api/v1/publisher</url>
         </repository>
     </distributionManagement>
+
+    <profiles>
+        <!-- Maven Central 배포용 프로파일 -->
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <!-- GPG 서명 플러그인 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
