--- a/excel-annotator-shaded/pom.xml
+++ b/excel-annotator-shaded/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.github.takoeats</groupId>
         <artifactId>excel-annotator-parent</artifactId>
-        <version>2.3.3</version>
+        <version>2.3.4</version>
     </parent>
 
     <artifactId>excel-annotator-shaded</artifactId>
@@ -73,6 +73,22 @@
                                     <pattern>org.apache.commons.codec</pattern>
                                     <shadedPattern>io.github.takoeats.shaded.commons.codec</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>org.apache.logging.log4j</pattern>
+                                    <shadedPattern>io.github.takoeats.shaded.log4j</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.apache.logging.slf4j</pattern>
+                                    <shadedPattern>io.github.takoeats.shaded.slf4j</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.apache.commons.math3</pattern>
+                                    <shadedPattern>io.github.takoeats.shaded.commons.math3</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.zaxxer.sparsebits</pattern>
+                                    <shadedPattern>io.github.takoeats.shaded.sparsebits</shadedPattern>
+                                </relocation>
                             </relocations>
                             <filters>
                                 <filter>
@@ -82,6 +98,8 @@
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
                                         <exclude>META-INF/maven/**</exclude>
+                                        <exclude>META-INF/versions/**</exclude>
+                                        <exclude>module-info.class</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
